added nav bar scrolling, description changes

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -4,25 +4,25 @@
 body {
 	font-family: "Open Sans", sans-serif;
 	color: #272829;
-  }
-  
-  a {
+}
+
+a {
 	color: #149ddd;
-  }
-  
-  a:hover {
+}
+
+a:hover {
 	color: #37b3ed;
 	text-decoration: none;
-  }
-  
-  h1, h2, h3, h4, h5, h6 {
+}
+
+h1, h2, h3, h4, h5, h6 {
 	font-family: "Raleway", sans-serif;
-  }
-  
-  /*--------------------------------------------------------------
+}
+
+/*--------------------------------------------------------------
   # Header
   --------------------------------------------------------------*/
-  #header {
+#header {
 	position: fixed;
 	top: 0;
 	left: 0;
@@ -34,16 +34,16 @@ body {
 	padding: 0 0.9rem;
 	background: #040b14;
 	overflow-y: auto;
-  }
-  
-  #header .profile img {
+}
+
+#header .profile img {
 	margin: 15px auto;
 	display: block;
 	width: 7.8vw;
 	border: 0.5rem solid #2c2f3f;
-  }
-  
-  #header .profile h1 {
+}
+
+#header .profile h1 {
 	font-size: 1.5rem;
 	margin: 0;
 	padding: 0;
@@ -51,14 +51,14 @@ body {
 	-moz-text-align-last: center;
 	text-align-last: center;
 	font-family: "Poppins", sans-serif;
-  }
-  
-  #header .profile h1 a, #header .profile h1 a:hover {
+}
+
+#header .profile h1 a, #header .profile h1 a:hover {
 	color: #fff;
 	text-decoration: none;
-  }
-  
-  #header .profile .social-links a {
+}
+
+#header .profile .social-links a {
 	font-size: 1.125rem;
 	display: inline-block;
 	background: #212431;
@@ -71,47 +71,48 @@ body {
 	width: 2.25rem;
 	height: 2.25rem;
 	transition: 0.3s;
-  }
-  
-  #header .profile .social-links a:hover {
+}
+
+#header .profile .social-links a:hover {
 	background: #149ddd;
 	color: #fff;
 	text-decoration: none;
-  }
-  
-  #main {
+}
+
+#main {
 	margin-left: 19vw;
-  }
-  
-  @media (max-width: 1199px) {
+}
+
+@media (max-width: 1199px) {
 	#header {
-	  left: -19vw;
+		left: -19vw;
 	}
+
 	#main {
-	  margin-left: 0;
+		margin-left: 0;
 	}
-  }
-  
-  /*--------------------------------------------------------------
+}
+
+/*--------------------------------------------------------------
   # Navigation Menu
   --------------------------------------------------------------*/
-  /* Desktop Navigation */
-  .nav-menu {
+/* Desktop Navigation */
+.nav-menu {
 	padding-top: 1.875rem;
-  }
-  
-  .nav-menu * {
+}
+
+.nav-menu * {
 	margin: 0;
 	padding: 0;
 	list-style: none;
-  }
-  
-  .nav-menu > ul > li {
+}
+
+.nav-menu>ul>li {
 	position: relative;
 	white-space: nowrap;
-  }
-  
-  .nav-menu a {
+}
+
+.nav-menu a {
 	display: flex;
 	align-items: center;
 	color: #a8a9b4;
@@ -119,34 +120,34 @@ body {
 	margin-bottom: 0.5rem;
 	transition: 0.3s;
 	font-size: 0.9rem;
-  }
-  
-  .nav-menu a i {
+}
+
+.nav-menu a i {
 	font-size: 1.5rem;
 	padding-right: 0.5rem;
 	color: #6f7180;
-  }
-  
-  .nav-menu a:hover, .nav-menu .active > a, .nav-menu li:hover > a {
+}
+
+.nav-menu a:hover, .nav-menu .active>a, .nav-menu li:hover>a {
 	text-decoration: none;
 	color: #fff;
-  }
-  
-  .nav-menu a:hover i, .nav-menu .active > a i, .nav-menu li:hover > a i {
+}
+
+.nav-menu a:hover i, .nav-menu .active>a i, .nav-menu li:hover>a i {
 	color: #149ddd;
-  }
-  
-  /*--------------------------------------------------------------
+}
+
+/*--------------------------------------------------------------
   # Hero Section
   --------------------------------------------------------------*/
-  #hero {
+#hero {
 	width: 100%;
 	height: 100vh;
 	background: url("") top center;
 	background-size: cover;
-  }
-  
-  #hero:before {
+}
+
+#hero:before {
 	content: "";
 	background: rgba(5, 13, 24, 0.3);
 	position: absolute;
@@ -155,73 +156,74 @@ body {
 	left: 0;
 	right: 0;
 	z-index: 1;
-  }
-  
-  #hero .hero-container {
+}
+
+#hero .hero-container {
 	position: relative;
 	z-index: 2;
 	min-width: 19vw;
-  }
-  
-  #hero h1 {
+}
+
+#hero h1 {
 	margin: 0 0 0.625rem 0;
 	font-size: 4rem;
 	font-weight: 700;
 	line-height: 3.5rem;
 	color: #fff;
-  }
-  
-  #hero p {
+}
+
+#hero p {
 	color: #fff;
 	margin-bottom: 3.125rem;
 	font-size: 1.625rem;
 	font-family: "Poppins", sans-serif;
-  }
-  
-  @media (min-width: 1024px) {
+}
+
+@media (min-width: 1024px) {
 	#hero {
-	  background-attachment: fixed;
+		background-attachment: fixed;
 	}
-  }
-  
-  @media (max-width: 768px) {
+}
+
+@media (max-width: 768px) {
 	#hero h1 {
-	  font-size: 1.75rem;
-	  line-height: 2.25rem;
+		font-size: 1.75rem;
+		line-height: 2.25rem;
 	}
+
 	#hero h2 {
-	  font-size: 1.125rem;
-	  line-height: 1.5rem;
-	  margin-bottom: 1.875rem;
+		font-size: 1.125rem;
+		line-height: 1.5rem;
+		margin-bottom: 1.875rem;
 	}
-  }
-  
-  /*--------------------------------------------------------------
+}
+
+/*--------------------------------------------------------------
   # Sections General
   --------------------------------------------------------------*/
-  section {
+section {
 	padding: 3.75rem 0;
 	overflow: hidden;
-  }
-  
-  .section-bg {
+}
+
+.section-bg {
 	background: #f5f8fd;
-  }
-  
-  .section-title {
+}
+
+.section-title {
 	padding-bottom: 1.875rem;
-  }
-  
-  .section-title h2 {
+}
+
+.section-title h2 {
 	font-size: 2rem;
 	font-weight: bold;
 	margin-bottom: 1.25rem;
 	padding-bottom: 1.25rem;
 	position: relative;
 	color: #173b6c;
-  }
-  
-  .section-title h2::after {
+}
+
+.section-title h2::after {
 	content: '';
 	position: absolute;
 	display: block;
@@ -230,59 +232,66 @@ body {
 	background: #149ddd;
 	bottom: 0;
 	left: 0;
-  }
-  
-  .section-title p {
+}
+
+.section-title p {
 	margin-bottom: 0;
-  }
-  
-  /*--------------------------------------------------------------
+}
+
+/*--------------------------------------------------------------
   # About
   --------------------------------------------------------------*/
-  .about .content h3 {
+.about .content h3 {
 	font-weight: 700;
 	font-size: 1.625rem;
 	color: #173b6c;
-  }
-  
-  .about .content ul {
+}
+
+.about .content ul {
 	list-style: none;
 	padding: 0;
-  }
-  
-  .about .content ul li {
+}
+
+.about .content ul li {
 	padding-bottom: 0.625rem;
-  }
-  
-  .about .content ul i {
+}
+
+.about .content ul i {
 	font-size: 1.25rem;
 	padding-right: 0.125rem;
 	color: #149ddd;
-  }
-  
-  .about .content p:last-child {
+}
+
+.about .content p:last-child {
 	margin-bottom: 0;
-  }
-  
-  /*--------------------------------------------------------------
+}
+
+/*--------------------------------------------------------------
   # CV
   --------------------------------------------------------------*/
-  .CV .CV-title {
+.CV .CV-title {
 	font-size: 1.625rem;
 	font-weight: 700;
 	margin-top: 1.25rem;
 	margin-bottom: 1.25rem;
 	color: #050d18;
-  }
-  
-  /*--------------------------------------------------------------
+}
+
+/*--------------------------------------------------------------
+  # projects
+  --------------------------------------------------------------*/
+.card-body .btn {
+	background-color: #149ddd;
+}
+
+/*--------------------------------------------------------------
   # Contact
   --------------------------------------------------------------*/
-  .contact {
+.contact {
 	padding-bottom: 130px;
-  }
-  
-  .contact i {
+}
+
+.contact i {
 	font-size: 1.25rem;
 	color: #149ddd;
 	float: left;
@@ -294,86 +303,42 @@ body {
 	align-items: center;
 	border-radius: 3.125rem;
 	transition: all 0.3s ease-in-out;
-  }
-  
-  .contact h4 {
+}
+
+.contact h4 {
 	padding: 0 0 0 3.75rem;
 	font-size: 1.375rem;
 	font-weight: 600;
 	margin-bottom: 0.3rem;
 	color: #050d18;
-  }
-  
-  .contact p {
+}
+
+.contact p {
 	padding: 0 0 0.625rem 3.75rem;
 	margin-bottom: 1.25rem;
 	font-size: 0.875rem;
 	color: #173b6c;
-  }
-  
-  .contact .email p {
+}
+
+.contact .email p {
 	padding-top: 0.3rem;
-  }
-  
-  .contact .info .social-links a:hover {
+}
+
+.contact .info .social-links a:hover {
 	background: #149ddd;
 	color: #fff;
-  }
-  
-  .contact .info .email:hover i, .contact .info .phone:hover i {
+}
+
+.contact .info .email:hover i, .contact .info .phone:hover i {
 	background: #149ddd;
 	color: #fff;
-  }
-  
-  /*--------------------------------------------------------------
-  # Breadcrumbs
-  --------------------------------------------------------------*/
-  .breadcrumbs {
-	padding: 20px 0;
-	background: #f9f9f9;
-  }
-  
-  .breadcrumbs h2 {
-	font-size: 26px;
-	font-weight: 300;
-  }
-  
-  .breadcrumbs ol {
-	display: flex;
-	flex-wrap: wrap;
-	list-style: none;
-	padding: 0;
-	margin: 0;
-	font-size: 15px;
-  }
-  
-  .breadcrumbs ol li + li {
-	padding-left: 10px;
-  }
-  
-  .breadcrumbs ol li + li::before {
-	display: inline-block;
-	padding-right: 10px;
-	color: #0e2442;
-	content: "/";
-  }
-  
-  @media (max-width: 768px) {
-	.breadcrumbs .d-flex {
-	  display: block !important;
-	}
-	.breadcrumbs ol {
-	  display: block;
-	}
-	.breadcrumbs ol li {
-	  display: inline-block;
-	}
-  }
-  
-  /*--------------------------------------------------------------
+}
+
+
+/*--------------------------------------------------------------
   # Footer
   --------------------------------------------------------------*/
-  #footer {
+#footer {
 	padding: 0.9rem;
 	color: #f4f6fd;
 	font-size: 0.875rem;
@@ -383,24 +348,19 @@ body {
 	width: 19vw;
 	z-index: 9999;
 	background: #040b14;
-  }
-  
-  #footer .copyright {
-	text-align: center;
-  }
-  
-  #footer .credits {
+}
+
+#footer .credits {
 	padding-top: 0.3rem;
 	text-align: center;
 	font-size: 0.8rem;
 	color: #eaebf0;
-  }
-  
-  @media (max-width: 1199px) {
+}
+
+@media (max-width: 1199px) {
 	#footer {
-	  position: static;
-	  width: auto;
-	  padding-right: 1.25rem 0.9rem;
+		position: static;
+		width: auto;
+		padding-right: 1.25rem 0.9rem;
 	}
-  }
-  
+}
